# Fortnite-LobbyBot-v2

./: .replit  INSTALL.bat  INSTALL.sh  LICENSE  README.md  README_EN.md  README_ES.md  RUN.bat  RUN.sh  commands.json  config.json  custom_commands.json  index.py  pyproject.toml  replies.json  replit.nix  requirements.txt
docs/en/: commands.md  config.md  custom_commands.md  docs.md  glossary.md  pc.md  repl.md  replies.md  setup.md
docs/es/: commands.md  config.md  custom_commands.md  docs.md  glossary.md  pc.md  repl.md  replies.md  setup.md
docs/ja/: commands.md  config.md  custom_commands.md  docs.md  glossary.md  pc.md  repl.md  replies.md  setup.md
lang/: en.json  es.json  ja.json
modules/: __init__.py  auth.py  auto_updater.py  bot.py  client.py  colors.py  commands.py  cosmetics.py  device_code.py  discord_client.py  encoder.py  formatter.py  http.py  localize.py  session_id.py  web.py  webhook.py
static/css/: boot-switch.css  clients-viewer-client.css  clients-viewer.css  editor.css  header.css  login.css  main.css  markdown.css
static/js/: boot-switch.js  clients-viewer-client.js  clients-viewer.js  editor.js  header.js  login.js  main.js  ws.js
templates/: boot-switch.jinja  clients-viewer-client.jinja  clients-viewer.jinja  editor.jinja  index.jinja  login.jinja  openfile.jinja
