[tool.poetry]
name = "Fortnite-LobbyBot-v2"
version = "0.1.0"
description = ""
authors = ["gomashio", "pdf114514"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "*"
colorama = "*"
"discord.py" = "*"
fortnitepy = { git = "https://github.com/gomashio1596/fortnitepy" }
jaconv = "*"
jinja2 = "*"
pykakasi = "*"
replit = "*"
sanic = "^21.3.0"  # Poetry is idiot
"sanic-routing" = "0.4.1"
uvloop = "*"
websockets = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
