[tool.poetry]
name = "Fortnite-LobbyBot-v2"
version = "0.1.0"
description = ""
authors = ["gomashio", "pdf114514"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
"discord.py" = "^2.2.2"
jaconv = "^0.3.4"
jinja2 = "^3.1.2"
pykakasi = "^2.2.1"
sanic = "^22.12.0"
tzlocal = "^4.2"
packaging = "^23.0"
pytz = "^2022.7.1"
uvloop = "^0.17.0"
replit = "^3.0.0"
fortnitepy = { git = "https://github.com/BayGamerYT/fortnitepy", branch = "flb" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
